# OPC-UA-Test-Software

./: .gitignore  .gitmodules  LICENSE  README.md
.scripts/: download_test_env.py  install_python312.py  modernize.py
Lib/dependencytree/: __init__.py  _test_dt.py  dependencytree.py
Python_Test_1/: receive.py  send.py
Python_Test_2/: RAEDME.md  client_asyncua_main.py  clock_get.py  clock_set.py  receive.py  send.py  server_asyncua_main.py
Python_Test_2/OPC_UA_Client/: __init__.py  asyncua_client.py
Python_Test_2/OPC_UA_Client/client_config_files/: client_config.json
Python_Test_2/OPC_UA_Server/: __init__.py  asyncua_node_container.py  asyncua_nodes.py  asyncua_server.py  opc_ua_namespace.py  opc_ua_node.py
Python_Test_2/OPC_UA_Server/DesignModel/: Server_DesignModel.xml
Python_Test_2/OPC_UA_Server/design_models/: server_design_model.xml
Python_Test_2/OPC_UA_Server/server_config_files/: __server_config.json  server_config.json
Python_Test_2/functions/: __init__.py  _test_userChoice.py  userChoice.py
Python_Test_2/light_weight_opcua/: client.py  server.py
Test/: test.py  test_Server.py
Test_3/CPP/src/: CMakeLists.txt  main.cpp  writer.cpp
Test_3/PythonCPP/CPP/src/: CMakeLists.txt  (+1 more)
Test_3/PythonCPP/Python/: Call_Cpp.py
Test_3/UDP_PubSub/src/: CMakeLists.txt  publisher.c  subscriber.c
Test_3/asyncua_Compiler/: asyncua_compiler.py
Test_3/asyncua_Compiler/DesignModels/: DesignModel.json
Test_3/asyncua_PubSub/: publisher_simple.py  subscriber_simple.py
Test_3/builder/: builder.py  builds.json  test_builds.json
doc/licenses/: BSD  MPL
(+2 files in other folders)
